trunk/Archive2/a9/9bc9866e44b67f/output
main.cpp:8:10: error: assigning to 'int (*)()' from incompatible type '<lambda at main.cpp:9:9>'
    func =
         ^
1 error generated.
