trunk/Archive2/a9/9bc9866e44b67f/main.cpp
#include <iostream>

int main()
{
    int (*func)();
    
    int i = 0;
    func =
        [&]()->int {
            std::cout << "func(): i= " << i << std::endl;
            return 0;
        }

}